--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "template",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "author": "sanjorcool",
   "license": "ISC",
@@ -14,6 +15,14 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.0",
     "prettier": "3.0.2"
+  },
+  "lint-staged": {
+    "*.{js,md,vue}": [
+      "prettier --check",
+      "eslint"
+    ]
   }
 }
