--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "lint-staged": "^14.0.0",
     "prettier": "3.0.2"
   },
+  "repository": {
+    "url": "https://github.com/sanjorcool/sanjorcool.git"
+  },
   "lint-staged": {
     "*.{js,md,vue}": [
       "prettier --check",
