--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "template",
   "main": "./src/index.js",
   "scripts": {
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettier": "prettier --write ."
   },
   "author": "sanjorcool",
   "license": "ISC",
@@ -21,7 +23,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.0",
-    "prettier": "3.0.2"
+    "prettier": "3.0.2",
+    "rollup": "^3.28.0"
   },
   "repository": {
     "url": "https://github.com/sanjorcool/sanjorcool.git"
